tests/paczka1/fuzzy1/76378693.err
Error in line 2: CKer A511 61,2
Error in line 10: CKer S539 50,4
Error in line 12: CKer S145 52,3
Error in line 26: A842 A511 -1,7
Error in line 32: QIF3f S539 172,06
Error in line 28: hXIKRUqDeuJ A842 35,0
